@@ -15,7 +15,7 @@ from . import socket
 from . import ssl as curiossl
 from .task import spawn
 
-async def _wrap_ssl_client(sock, ssl, server_hostname):
+async def _wrap_ssl_client(sock, ssl, server_hostname, alpn_protocols):
     # Applies SSL to a client connection. Returns an SSL socket.
     if ssl:
         if isinstance(ssl, bool):
@@ -23,6 +23,9 @@ async def _wrap_ssl_client(sock, ssl, server_hostname):
             if not server_hostname:
                 sslcontext._context.check_hostname = False
                 sslcontext._context.verify_mode = curiossl.CERT_NONE
+            
+            if alpn_protocols:
+                sslcontext.set_alpn_protocols(alpn_protocols)
         else:
             # Assume that ssl is an already created context
             sslcontext = ssl
@@ -32,11 +35,12 @@ async def _wrap_ssl_client(sock, ssl, server_hostname):
         else:
             extra_args = { }
 
+
         sock = sslcontext.wrap_socket(sock, **extra_args)
         await sock.do_handshake()
     return sock
 
-async def open_connection(host, port, *, ssl=None, source_addr=None, server_hostname=None):
+async def open_connection(host, port, *, ssl=None, source_addr=None, server_hostname=None, alpn_protocols=None):
     '''
     Create a TCP connection to a given Internet host and port with optional SSL applied to it.
     '''
@@ -48,14 +52,14 @@ async def open_connection(host, port, *, ssl=None, source_addr=None, server_host
     try:
         # Apply SSL wrapping to the connection, if applicable
         if ssl:
-            sock = await _wrap_ssl_client(sock, ssl, server_hostname)
+            sock = await _wrap_ssl_client(sock, ssl, server_hostname, alpn_protocols)
 
         return sock
     except Exception:
         sock._socket.close()
         raise
 
-async def open_unix_connection(path, *, ssl=None, server_hostname=None):
+async def open_unix_connection(path, *, ssl=None, server_hostname=None, alpn_protocols=None):
     if server_hostname and not ssl:
         raise ValueError('server_hostname is only applicable with SSL')
 
@@ -65,7 +69,7 @@ async def open_unix_connection(path, *, ssl=None, server_hostname=None):
 
         # Apply SSL wrapping to connection, if applicable
         if ssl:
-            sock = await _wrap_ssl_client(sock, ssl, server_hostname)
+            sock = await _wrap_ssl_client(sock, ssl, server_hostname, alpn_protocols)
 
         return sock
     except Exception:
